--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-prova pagina
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+<link rel="stylesheet" href="css/style.css">
+
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Github Pages</title>
+</head>
+<body>
+
+    <h1>Prova Github Pages</h1>
+
+    <p>Prova pagina</p>
+</body>
+</html>
