--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <link rel="stylesheet" href="css/style.css">
 
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js' integrity='sha512-+k1pnlgt4F1H8L7t3z95o3/KO+o78INEcXTbnoJQ/F2VqDVhWoaiVml/OEHv9HsVgxUaVW+IbiZPUJQfF/YxZw==' crossorigin='anonymous'></script>
+
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +15,8 @@
 
     <h1>Prova Github Pages</h1>
 
-    <p>Prova pagina</p>
+    <p id = " testo" >Prova pagina</p>
+
+
 </body>
 </html>
