--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <h1>Prova Github Pages</h1>
 
-    <p id = " testo" >Prova pagina</p>
+    <div id = "testo" >Prova pagina</div>
+
+    <script src="./script/javascript.js"></script>
 
 
 </body>
