--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
     <h1>Prova Github Pages</h1>
 
-    <div id = "testo" >Prova pagina</div>
+    <div class = "content" >
+
+        <div id = "testo" >Prova pagina</div>
+
+    </div>
+
 
     <script src="./script/javascript.js"></script>
 
